--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
+    "axios": "^0.19.0",
+    "immer": "^4.0.1",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.2",
@@ -19,6 +22,14 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.1",
+    "react-toastify": "^5.4.0",
+    "reactotron-react-native": "^4.0.2",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
