--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "axios": "^0.19.0",
+    "date-fns": "^2.5.0",
     "immer": "^4.0.1",
     "install": "^0.13.0",
     "prop-types": "^15.7.2",
