--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/datetimepicker": "^2.1.0",
     "axios": "^0.19.0",
     "date-fns": "^2.5.0",
     "immer": "^4.0.1",
@@ -25,6 +26,7 @@
     "react-native-screens": "^2.0.0-alpha.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.4",
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.1",
     "reactotron-react-native": "^4.0.2",
